gcc/testsuite/rust/rustc/ui/empty/empty-linkname.rs
#[link(name = "")] // { dg-error ".E0454." "" { target *-*-* } }
extern {
}

fn main() {}

